--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+HIS_LOGIN_API_ENDPOINT="http://praava.icthealth.com/live/portal/createUserCredential"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
