--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=host_name
+DB_PORT=port
+DB_DATABASE=database_name
+DB_USERNAME=database_username
+DB_PASSWORD=database_password
 
 HIS_LOGIN_API_ENDPOINT="http://praava.icthealth.com/live/portal/createUserCredential"
 
