Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=IT Check List for Employee Clearance
+APP_NAME=IT_Check_List_for_Employee_Clearance
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
